# NoteNest

./: .gitignore  README.md  shell.nix
backend/: .env  Cargo.toml
backend/migrations/: 20250106182504_create_notes_and_checklist.sql
backend/src/: config.rs  db.rs  lib.rs  main.rs
backend/src/models/: mod.rs  note.rs
backend/src/routes/: checklist.rs  mod.rs  notes.rs
backend/src/services/: mod.rs  note_service.rs
backend/src/tests/: mod.rs  test_db.rs  test_notes.rs
docker/: docker-compose.yaml
