[package]
name = "note-nest-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.22"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-test = "0.4.4"
uuid = { version = "1.11.0", features = ["v4"] }
