[package]
name = "note-nest-backend"
version = "0.1.2"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.22"
serde = "1.0.217"
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "time"] }
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-test = "0.4.4"
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dev-dependencies]
actix-service = "2.0.2"
serial_test = "3.2.0"
